--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.3",
-        "axios": "^1.6.4",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0.0",
         "react-router-dom": "^6.28.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@mui/icons-material": "^6.1.8",
+        "@mui/material": "^6.1.8",
+        "@mui/x-data-grid": "^7.22.3",
         "bootstrap": "^5.3.3",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
